--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,31 @@ main {
 }
 
 .messages__hist {
-  @apply px-4 flex flex-col gap-5
+  @apply px-4 flex flex-col gap-6
+}
+
+.message {
+  @apply flex
+}
+
+.message__right {
+  @apply justify-end
+}
+
+.message__left {
+  @apply justify-start
+}
+
+.message__div {
+  @apply flex gap-3 items-end
+}
+
+.message__p {
+  @apply w-fit bg-slate-200 py-2 px-3 rounded-lg h-fit
+}
+
+.message__img {
+  @apply h-12 rounded-full
 }
 
 .messages__form {
